--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "esearch-seg",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "description": "paddleseg models run on onnx",
     "main": "./dist/esearch-seg.umd.cjs",
     "module": "./dist/esearch-seg.js",
@@ -19,6 +19,10 @@
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
+    "files": [
+        "dist/",
+        "src/"
+    ],
     "keywords": [
         "seg",
         "paddleseg",
