开发 build命令更新

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "scripts": {
         "test": "vite ",
         "dev": "vite --host 0.0.0.0",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "preview": "vite preview"
     },
     "files": [
