--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
                   node-version: 20
                   registry-url: https://registry.npmjs.org/
             - run: |
-                  npm i --production
+                  npm i
                   npm run build
             - run: npm publish
               env:
