--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     },
     "license": "Apache-2.0",
     "devDependencies": {
-        "onnxruntime-node": "^1.12.1",
+        "onnxruntime-node": "^1.22.0-dev",
         "typescript": "^5.1.3",
         "vite": "^4.3.9"
     }
